--- a/api/qsharp/microsoft.quantum.extensions.math.absb.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.absb.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.absb
 name: AbsB
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: AbsB 已被弃用。 请改用 @"microsoft.quantum.math.absl"。
 syntax: 'function AbsB (a : BigInt) : BigInt'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: db214c18fec7a13148fd4e9088caafa0ed3c62e3
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: fcb699701bbef8900ec6006a1ff0c72766766615
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685573"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89348868"
