--- a/api/qsharp/microsoft.quantum.extensions.math.arcsin.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.arcsin.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.arcsin
 name: ArcSin
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: ArcSin 已被弃用。 请改用 @"microsoft.quantum.math.arcsin"。
 syntax: 'function ArcSin (theta : Double) : Double'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 6c4bc07d34ce0f7e4fa0cb7d8eab704d925bdc82
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 083bce2eff29945f87831b305cb8fd62a7aa94e4
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685534"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89348681"
