--- a/api/qsharp/microsoft.quantum.machinelearning.trainsequentialclassifier.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.trainsequentialclassifier.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.machinelearning.trainsequentialclassifier
 name: TrainSequentialClassifier
 type: operation
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 给定顺序分类器的结构，训练给定标记定型集上的分类器。
 syntax: 'operation TrainSequentialClassifier (models : Microsoft.Quantum.MachineLearning.SequentialModel[], samples : Microsoft.Quantum.MachineLearning.LabeledSample[], options : Microsoft.Quantum.MachineLearning.TrainingOptions, trainingSchedule : Microsoft.Quantum.MachineLearning.SamplingSchedule, validationSchedule : Microsoft.Quantum.MachineLearning.SamplingSchedule) : (Microsoft.Quantum.MachineLearning.SequentialModel, Int)'
 input:
@@ -17,7 +17,7 @@ input:
     isArray: true
     uid: microsoft.quantum.machinelearning.labeledsample
   - name: options
-    summary: 训练时要使用的配置;有关@"microsoft.quantum.machinelearning.trainingoptions"更@"microsoft.quantum.machinelearning.defaulttrainingoptions"多详细信息，请参阅和。
+    summary: 训练时要使用的配置; @"microsoft.quantum.machinelearning.trainingoptions" @"microsoft.quantum.machinelearning.defaulttrainingoptions" 有关更多详细信息，请参阅和。
     uid: microsoft.quantum.machinelearning.trainingoptions
   - name: trainingSchedule
     summary: 在定型步骤中从定型数据中选择样本时要使用的采样计划。
@@ -40,9 +40,9 @@ seeAlso:
 - microsoft.quantum.machinelearning.trainsequentialclassifieratmodel
 - microsoft.quantum.machinelearning.validatesequentialclassifier
 metadata:
-  ms.openlocfilehash: e5a9d2c6747ee970bfd01b266e2f10f45d514f06
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b8b0873395a3d75ea06f655a08d0de496c1f4449
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684317"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89335489"
