--- a/api/qsharp/microsoft.quantum.math.absi.yml
+++ b/api/qsharp/microsoft.quantum.math.absi.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.absi
 name: AbsI
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回整数的绝对值。
-remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.abs) 。
+remarks: 有关更多详细信息，请参阅 [system.object](https://docs.microsoft.com/dotnet/api/system.math.abs) 。
 syntax: 'function AbsI (a : Int) : Int'
 input:
   content: '(a : Int)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 9005928fc9b8a797f504b9d4c95d1773e2eaa45d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: da6729b76a01d642b76f110793cc40e1ebf115bf
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681608"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89335302"
