--- a/api/qsharp/microsoft.quantum.arithmetic.incrementbymodularinteger.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.incrementbymodularinteger.yml
@@ -2,18 +2,18 @@
 uid: microsoft.quantum.arithmetic.incrementbymodularinteger
 name: IncrementByModularInteger
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: >-
   按整数常量执行 qubit 寄存器的模块化增量。
 
 
-  通过 $y $ `increment` $N $ 和在`modulus`中编码的整数，让我们`target`以 $a $ 表示。
+  通过 `increment` `modulus` $y $ $N $ 和在中编码的整数，让我们以 $a $ 表示。 `target`
 
-  然后，操作执行以下转换： \begin{align} \ket{y} \mapsto \ket{（y + a） \operatorname{mod} N} \end{align} 整数以小 endian 格式编码。
+  然后，操作执行以下转换： \begin{align} \ket{y} \mapsto \ket{ (y + a) \operatorname{mod} N} \end{align} 整数以小 endian 格式编码。
 remarks: >-
   假定目标的初始值小于 $N $，并且 $a $ $N 增量小于 $。
 
-  请注意<xref:microsoft.quantum.arithmetic.incrementphasebymodularinteger> ，在`PhaseLittleEndian`基础上实现相同的操作。
+  请注意， <xref:microsoft.quantum.arithmetic.incrementphasebymodularinteger> 在基础上实现相同的操作 `PhaseLittleEndian` 。
 syntax: 'operation IncrementByModularInteger (increment : Int, modulus : Int, target : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
   content: '(increment : Int, modulus : Int, target : Microsoft.Quantum.Arithmetic.LittleEndian)'
@@ -27,7 +27,7 @@ input:
     isPrimitive: true
     uid: Int
   - name: target
-    summary: $A $ 添加到`LittleEndian`的格式`increment`中的整数 $y $。
+    summary: '`LittleEndian`$A $ 添加到的格式中的整数 $y $ `increment` 。'
     uid: microsoft.quantum.arithmetic.littleendian
 output:
   content: Unit
@@ -40,9 +40,9 @@ functors:
 seeAlso:
 - microsoft.quantum.arithmetic.incrementphasebymodularinteger
 metadata:
-  ms.openlocfilehash: 53faa65d67629d0e4c73efc03724cb4b4b30675d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 2f91365a06304e6e4e6b71783a941192f4a7121e
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679543"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89342867"
