--- a/api/qsharp/microsoft.quantum.extensions.math.ceiling.yml
+++ b/api/qsharp/microsoft.quantum.extensions.math.ceiling.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.math.ceiling
 name: Ceiling
 type: function
-namespace: Microsoft.Quantum.Extensions.Math
+namespace: microsoft.quantum.extensions.math
 summary: 天花板已弃用。 请改用 @"microsoft.quantum.math.ceiling"。
 syntax: 'function Ceiling (value : Double) : Int'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: bb631eefabe0b7491cfe32d38b9402656c6031b6
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d597d6f5fd1d31b1ea6e97386ce418c111b9af6c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685493"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89348630"
