--- a/api/qsharp/microsoft.quantum.machinelearning.inferredlabel.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.inferredlabel.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.machinelearning.inferredlabel
 name: InferredLabel
 type: function
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 给定一个分类概率和一个偏差，返回从该概率推导出的标签。
 syntax: 'function InferredLabel (bias : Double, probability : Double) : Int'
 input:
@@ -23,9 +23,9 @@ output:
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: ac1fa223c978825e6b79d593b225947869a638ac
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 5521175b69a9b30db055c079759eef8c48aaa135
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885202"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336101"
