--- a/api/qsharp/microsoft.quantum.machinelearning.inputencoder.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.inputencoder.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.machinelearning.inputencoder
 name: InputEncoder
 type: function
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 给定一组系数和公差后，将返回状态准备操作，以便将每个系数准备为计算基础状态的相应波幅。
 syntax: 'function InputEncoder (coefficients : Double[]) : Microsoft.Quantum.MachineLearning.StateGenerator'
 input:
@@ -19,9 +19,9 @@ output:
   - summary: 准备将给定的系数作为给定寄存器上的输入状态的状态准备操作。
     uid: microsoft.quantum.machinelearning.stategenerator
 metadata:
-  ms.openlocfilehash: b1a45c2ce026ab15f1134167355fb131d9b0022e
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 88bb75d8e6e330cdc7d157b80581413333c9b371
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684514"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336050"
