--- a/api/qsharp/microsoft.quantum.machinelearning.labeledsample.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.labeledsample.yml
@@ -2,13 +2,13 @@
 uid: microsoft.quantum.machinelearning.labeledsample
 name: LabeledSample
 type: newtype
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 一个示例，使用该示例所属的类进行标记。
 syntax: newtype LabeledSample = (Double[], Int);
 metadata:
-  ms.openlocfilehash: 8930a7baffd2199695e32e851bb72f65e0af4c43
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: feab9c73dfa83a34b66d94443cd1704128cee596
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684510"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89335931"
