--- a/api/qsharp/microsoft.quantum.machinelearning.validationresults.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.validationresults.yml
@@ -2,13 +2,13 @@
 uid: microsoft.quantum.machinelearning.validationresults
 name: ValidationResults
 type: newtype
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 根据一组示例验证了分类器后得到的结果。
 syntax: newtype ValidationResults = (Int, Int);
 metadata:
-  ms.openlocfilehash: 74e5bb64a8001a9822e424cde7fb7c834f9e0384
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 3a4395506ab3c9c8bbceda4e0028d9791106eb10
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684263"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89335438"
